--- a/mistral-7b-finetune/.gitignore
+++ b/mistral-7b-finetune/.gitignore
@@ -1,4 +1,34 @@
+# Virtual environment
 mistral-env/
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+
+# Model outputs and checkpoints (DO NOT COMMIT - too large!)
+mistral-7b-instruct-qlora/
+checkpoint-*/
+runs/
+
+# HuggingFace cache (models auto-download)
+.cache/
+huggingface/
+
+# Dataset cache
+.datasets/
+datasets/
+
+# Training logs
+*.log
+wandb/
+tensorboard/
+
+# OS files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
